--- a/app/src/main/res/values-sk/strings.xml
+++ b/app/src/main/res/values-sk/strings.xml
@@ -24,17 +24,18 @@
     <string name="update_file_at_note">Aktualizovať samotný súbor po úprave poznámky\n(ak bude daný súbor presunutý, alebo vymazaný, bude vymazaná aj poznámka)</string>
     <string name="delete_file_itself">Odstrániť aj súbor \"%s\"</string>
     <string name="note_saved_successfully">Poznámka \"%s\" bola úspešne uložená</string>
-    <string name="display_success_message">Zobraziť správu o úspešnom uložení poznámky</string>
 
     <!-- Settings -->
-    <string name="widget_note">Poznámka použitá vo widgete</string>
+    <string name="display_success_message">Zobraziť správu o úspešnom uložení poznámky</string>
     <string name="links_and_emails_clickable">Spraviť odkazy a emaily klikateľnými</string>
     <string name="place_cursor_end">Umiestniť kurzor na koniec poznámky</string>
     <string name="monospaced_font">Použiť písmo Monospace</string>
+    <string name="show_keyboard">Zobraziť klávesnicu po spustení</string>
     <string name="alignment">Zarovnanie</string>
     <string name="left">Vľavo</string>
     <string name="center">Uprostred</string>
     <string name="right">Vpravo</string>
+    <string name="widget_note">Poznámka použitá vo widgete</string>
 
     <!-- Strings displayed only on Google Playstore. Optional, but good to have -->
     <!-- Short description has to have less than 80 chars -->
