--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Simple Notes</string>
+    <string name="app_name">Schlichte Notizen</string>
     <string name="app_launcher_name">Notizen</string>
     <string name="widget_config">Vielen Dank, dass du Simple Notes benutzt.\nWeitere einfache Apps findest du auf SimpleMobileTools.com.</string>
     <string name="cannot_share_empty_text">Eine leere Notiz kann nicht geteilt werden</string>
@@ -27,7 +27,7 @@
 
     <!-- Settings -->
     <string name="display_success_message">Zeige Benachrichtigung bei erfolgreichem Speichern</string>
-    <string name="links_and_emails_clickable">Links und E-Mail Adressen anklickbar</string>
+    <string name="links_and_emails_clickable">Links und E-Mail-Adressen anklickbar</string>
     <string name="place_cursor_end">Platziere Cursor am Ende der Notiz</string>
     <string name="monospaced_font">Benutze Monospace Schrift</string>
     <string name="show_keyboard">Zeige Tastatur beim Start</string>
@@ -41,7 +41,7 @@
     <!-- Short description has to have less than 80 chars -->
     <string name="app_short_description">Ein einfaches Textfeld für Notizen. Komplett ohne Werbung.</string>
     <string name="app_long_description">
-        Du musst dir schnell aufschreiben, was du kaufen wolltest oder eine Adresse oder Startup Idee? Dann ist diese App genau das Richtige für dich! Keine komplizierte Einrichtung, du kannst direkt beginnen zu tippen. Inklusive Autosave, damit du keine ungespeicherten Änderungen verlierst. Unterstützt die Erstellung von mehreren unabhängigen Notizen.
+        Du musst dir schnell aufschreiben, was du kaufen wolltest oder eine Adresse oder Startup Idee? Dann ist diese App genau das Richtige für dich! Keine komplizierte Einrichtung, du kannst direkt beginnen zu tippen. Inklusive Autosave-Funktion, damit du keine ungespeicherten Änderungen verlierst. Unterstützt die Erstellung von mehreren unabhängigen Notizen.
 
         Du kannst auf eine Notiz in Windeseile durch die anpassbaren Widgets zurückgreifen, welche die App mit einem Klick öffnen.
 
