--- a/app/src/main/res/values-hu/strings.xml
+++ b/app/src/main/res/values-hu/strings.xml
@@ -24,6 +24,7 @@
     <string name="update_file_at_note">A jegyzetbe íráskor a fájlba is írás\n(a jegyzet törlődik ha a fájl törlődik, vagy változik az elérési útvonala)</string>
     <string name="delete_file_itself">\"%s\" fájl is törlődjön</string>
     <string name="note_saved_successfully">\"%s\" nevű jegyzet elmentve</string>
+    <string name="note_exported_successfully">Note \"%s\" exported successfully</string>
 
     <!-- Settings -->
     <string name="display_success_message">Sikeres mentés üzenetek megjelenítése</string>
