--- a/app/src/main/res/values-pl/strings.xml
+++ b/app/src/main/res/values-pl/strings.xml
@@ -24,6 +24,7 @@
     <string name="update_file_at_note">Zaktualizuj plik po zaktualizowaniu notatki\n(notatka zostanie usunięta jeśli plik zostanie usunięty lub zmieni się jego lokalizacja)</string>
     <string name="delete_file_itself">Usuń także plik \"%s\"</string>
     <string name="note_saved_successfully">Notatka \"%s\" została zapisana</string>
+    <string name="note_exported_successfully">Note \"%s\" exported successfully</string>
 
     <!-- Settings -->
     <string name="display_success_message">Wyświetlaj informacje o pomyślnym zapisaniu notatki</string>
