--- a/app/src/main/res/values-lt/strings.xml
+++ b/app/src/main/res/values-lt/strings.xml
@@ -32,7 +32,7 @@
     <string name="place_cursor_end">Perkelti þymeklá á áraðo pabaigà</string>
     <string name="monospaced_font">Use monospaced font</string>
     <string name="show_keyboard">Show keyboard on startup</string>
-    <string name="show_wordcount">Show word counter</string>
+    <string name="show_word_count">Show word counter</string>
     <string name="alignment">Átrauka</string>
     <string name="left">Kairëje</string>
     <string name="center">Centre</string>
