--- a/app/src/main/res/values-nl/strings.xml
+++ b/app/src/main/res/values-nl/strings.xml
@@ -32,7 +32,7 @@
     <string name="place_cursor_end">Cursor onderaan notitie plaatsen</string>
     <string name="monospaced_font">Lettertype met vaste breedte gebruiken</string>
     <string name="show_keyboard">Toetsenbord bij start tonen</string>
-    <string name="show_wordcount">Show word counter</string>
+    <string name="show_word_count">Show word counter</string>
     <string name="alignment">Uitlijning</string>
     <string name="left">Links</string>
     <string name="center">Midden</string>
