--- a/app/src/main/res/values-hu/strings.xml
+++ b/app/src/main/res/values-hu/strings.xml
@@ -32,7 +32,7 @@
     <string name="place_cursor_end">Place cursor to the end of note</string>
     <string name="monospaced_font">Use monospaced font</string>
     <string name="show_keyboard">Show keyboard on startup</string>
-    <string name="show_word_count">Show word counter</string>
+    <string name="show_word_count">Show word count</string>
     <string name="alignment">Igazítottság</string>
     <string name="left">Bal</string>
     <string name="center">Közép</string>
