--- a/app/src/main/res/values-pt/strings.xml
+++ b/app/src/main/res/values-pt/strings.xml
@@ -32,7 +32,7 @@
     <string name="place_cursor_end">Colocar cursor no fim da nota</string>
     <string name="monospaced_font">Usar letra mono-espaçada</string>
     <string name="show_keyboard">Mostrar teclado ao inciar</string>
-    <string name="show_word_count">Show word counter</string>
+    <string name="show_word_count">Show word count</string>
     <string name="alignment">Gravidade</string>
     <string name="left">Esquerda</string>
     <string name="center">Centro</string>
